--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 	<title>Interview Excercises</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+
+	<button>CHECKOUT</button>
 
 </body>
 </html>
